tests/packaging-test/test_out/invalid-version.txt
error: invalid version of dependency
 --> invalid-version\package.ctlm:1:84
  |
1 | deps {     git "github.com/jakubDoka/water" ; git "github.com/jakubDoka/water"     "non existent version" ; }
  |                                                                                    ^^^^^^^^^^^^^^^^^^^^^^ here
  |
  = info: the version did not match any tag in 'https://github.com/jakubDoka/water' repository

